# sphinx-yaml-table

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: pytest.yml  release.yml
sphinx_yaml_table/: __init__.py
test-data/basic/: conf.py  index.rst
